Update form submission

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -345,7 +345,7 @@ section {
 		background: $secondary-color;
 		color: white;
 		font-weight: bold;
-		outline: 0;
+		border: 0;
 		@include inline-block();
 		@include box-shadow(rgba($secondary-color,0.4) 4px 4px 4px 0);
 		@include transition(background 0.8s ease, box-shadow 0.8s ease);
