--- a/src/components/templates/portfolio/styles.module.css
+++ b/src/components/templates/portfolio/styles.module.css
@@ -1,4 +1,5 @@
 .container {
+  margin: 0 12px;
   cursor: grab;
   display: flex;
   align-items: center;
@@ -17,7 +18,7 @@
   touch-action: none;
 }
 
-.deck > div > div {
+.content {
   background-color: white;
   background-size: 80%;
   background-repeat: no-repeat;
